# 02-pydantic-data-quality-e-tdd-aplicado-em-projeto-de-dados

./: README.md  pyproject.toml
app/: etl.py  etl_infer_schema.py  funcao.py  schema.py
docs/: index.md
tests/: test_func_etl.py  test_funcao_ola.py
